--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 		<div class="container">
 			<header class="header">
 				<span class="header_inner">
-					<span class="name">
+					<!--<span class="name">
 						Bartosz Krawczyk
-					</span>
+					</span> -->
 					<div class="header_space">
 					</div>
 					<span class="header_right">
