--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 	</head>
 	<body>
 		<div class="container">
-			<header class="header">
+			<!--<header class="header">
 				<span class="header_inner">
-					<!--<span class="name">
+					<span class="name">
 						Bartosz Krawczyk
-					</span> -->
+					</span>
 					<div class="header_space">
 					</div>
 					<span class="header_right">
@@ -22,7 +22,7 @@
 						</nav>
 					</span>
 				</span>
-			</header>
+			</header>-->
 			<div class="content">
 				Hello
 			</div>
