--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
 	</head>
 	<body>
 		<div class="container">
-			<!--<header class="header">
+			<header class="header">
 				<span class="header_inner">
 					<span class="name">
 						Bartosz Krawczyk
 					</span>
 					<div class="header_space">
 					</div>
-					<span class="header_right">
+					<!--<span class="header_right">
 						<nav class="menu">
 							<ul class="menu_inner">
 								<li><a href="CV.html">Projects</a></li>
 								<li>CV</li>
 							</ul>
 						</nav>
-					</span>
+					</span>-->
 				</span>
-			</header>-->
+			</header>
 			<div class="content">
 				Hello
 			</div>
