--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 		<div class="container">
 			<header class="header">
 				<span class="header_inner">
-					<span class="name">
+					<!--<span class="name">
 						Bartosz Krawczyk
 					</span>
 					<div class="header_space">
 					</div>
-					<!--<span class="header_right">
+					<span class="header_right">
 						<nav class="menu">
 							<ul class="menu_inner">
 								<li><a href="CV.html">Projects</a></li>
