--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<div class="container">
 			<header class="header">
 				<span class="header_inner">
-					<!--<span class="name">
+					<span class="name">
 						Bartosz Krawczyk
 					</span>
 					<div class="header_space">
@@ -20,7 +20,7 @@
 								<li>CV</li>
 							</ul>
 						</nav>
-					</span>-->
+					</span>
 				</span>
 			</header>
 			<div class="content">
